--- a/PieBrain/ChedWeb/backend/.env.example
+++ b/PieBrain/ChedWeb/backend/.env.example
@@ -10,6 +10,13 @@ STUN_SERVER=stun:stun.l.google.com:19302
 # TURN_USERNAME=user
 # TURN_PASSWORD=pass
 
+# Camera configuration
+CAMERA_ENABLED=true
+CAMERA_WIDTH=640
+CAMERA_HEIGHT=480
+CAMERA_FRAMERATE=30
+CAMERA_ROTATION=0
+
 # Serial/UART configuration (for future ESP32 communication)
 SERIAL_PORT=/dev/ttyUSB0
 SERIAL_BAUDRATE=115200
