feat: Implement real-time system metrics monitoring via WebRTC DataChannel
- Added SystemMetrics model to backend for CPU, memory, temperature, and disk usage data.
- Integrated psutil for system monitoring in the backend.
- Updated Zustand store to manage system metrics and maintain a rolling history of metrics data.
- Created SystemMetricsCard component to display current metrics and time-series graphs using Recharts.
- Enhanced WebRTC manager to handle incoming system metrics data.
- Updated ConnectionControls to wire up system metrics updates.
- Added new SystemMetricsSchema for type validation using Zod.
- Updated package.json to include recharts for graphing capabilities.
- Documented implementation details and usage in TELEMETRY_IMPLEMENTATION.md.

--- a/PieBrain/ChedWeb/backend/requirements.txt
+++ b/PieBrain/ChedWeb/backend/requirements.txt
@@ -7,6 +7,7 @@ pydantic-settings>=2.1.0
 python-dotenv>=1.0.0
 loguru>=0.7.0
 pyserial>=3.5
+psutil>=5.9.0  # System metrics monitoring
 
 # Camera/Video dependencies
 picamera2>=0.3.12  # Raspberry Pi camera interface
