--- a/PieBrain/ChedWeb/frontend/package.json
+++ b/PieBrain/ChedWeb/frontend/package.json
@@ -12,14 +12,15 @@
     "test": "vitest"
   },
   "dependencies": {
+    "axios": "^1.6.2",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "zustand": "^4.4.7",
-    "axios": "^1.6.2",
-    "zod": "^3.22.4",
-    "clsx": "^2.0.0",
+    "recharts": "^3.3.0",
     "tailwind-merge": "^2.1.0",
-    "lucide-react": "^0.294.0"
+    "zod": "^3.22.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
