--- a/PieBrain/ChedWeb/backend/.env.example
+++ b/PieBrain/ChedWeb/backend/.env.example
@@ -15,7 +15,7 @@ CAMERA_ENABLED=true
 CAMERA_WIDTH=640
 CAMERA_HEIGHT=480
 CAMERA_FRAMERATE=30
-CAMERA_ROTATION=0
+CAMERA_FLIP_180=true
 
 # Serial/UART configuration (for future ESP32 communication)
 SERIAL_PORT=/dev/ttyUSB0
