--- a/PieBrain/ChedWeb/backend/.env.example
+++ b/PieBrain/ChedWeb/backend/.env.example
@@ -17,10 +17,11 @@ CAMERA_HEIGHT=480
 CAMERA_FRAMERATE=30
 CAMERA_FLIP_180=true
 
-# Serial/UART configuration (for future ESP32 communication)
-SERIAL_PORT=/dev/ttyUSB0
+# Serial/UART configuration (ESP32 MotionDriver)
+SERIAL_PORT=/dev/ttyUSB0  # Or /dev/serial0 for Pi GPIO UART
 SERIAL_BAUDRATE=115200
 SERIAL_TIMEOUT=1.0
+SERIAL_MOCK=false  # Set to true for testing without hardware
 
 # Safety settings (placeholders for future implementation)
 DEADMAN_TIMEOUT_MS=500
