--- a/PieBrain/ChedWeb/backend/requirements.txt
+++ b/PieBrain/ChedWeb/backend/requirements.txt
@@ -7,10 +7,11 @@ pydantic-settings>=2.1.0
 python-dotenv>=1.0.0
 loguru>=0.7.0
 pyserial>=3.5
+pyserial-asyncio>=0.6  # Async serial communication for UART bridge
 psutil>=5.9.0  # System metrics monitoring
 
 # Camera/Video dependencies
-picamera2>=0.3.12  # Raspberry Pi camera interface
+# picamera2>=0.3.12  # Raspberry Pi camera interface - install via system packages, requires libcamera
 av>=10.0.0  # PyAV for video frame handling
 numpy>=1.24.0  # Array operations for video frames
 
