--- a/PieBrain/ChedWeb/backend/cheddar-backend.service
+++ b/PieBrain/ChedWeb/backend/cheddar-backend.service
@@ -6,15 +6,15 @@ Wants=network-online.target
 [Service]
 Type=simple
 User=adamprobert
-WorkingDirectory=/home/adamprobert/Cheddar
+WorkingDirectory=/home/adamprobert/Cheddar/PieBrain/ChedWeb/backend
 Environment="PATH=/home/adamprobert/Cheddar/PieBrain/ChedWeb/backend/.venv/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
 
 # Pre-start: Git sync from main branch
 ExecStartPre=/bin/bash -c 'cd /home/adamprobert/Cheddar && git checkout main && git reset --hard HEAD && git pull'
 
 # Install/update Python dependencies
-ExecStartPre=/bin/bash -c 'cd /home/adamprobert/Cheddar/PieBrain/ChedWeb/backend && /home/adamprobert/Cheddar/PieBrain/ChedWeb/backend/.venv/bin/pip install --upgrade pip'
-ExecStartPre=/bin/bash -c 'cd /home/adamprobert/Cheddar/PieBrain/ChedWeb/backend && /home/adamprobert/Cheddar/PieBrain/ChedWeb/backend/.venv/bin/pip install -r requirements.txt'
+ExecStartPre=/bin/bash -c 'cd /home/adamprobert/Cheddar/PieBrain/ChedWeb/backend && .venv/bin/pip install --upgrade pip'
+ExecStartPre=/bin/bash -c 'cd /home/adamprobert/Cheddar/PieBrain/ChedWeb/backend && .venv/bin/pip install -r requirements.txt'
 
 # Start backend
 ExecStart=/home/adamprobert/Cheddar/PieBrain/ChedWeb/backend/.venv/bin/uvicorn main:app --host 0.0.0.0 --port 8000
