fix: update Git sync commands in service files for consistency

--- a/PieBrain/ChedWeb/backend/cheddar-backend.service
+++ b/PieBrain/ChedWeb/backend/cheddar-backend.service
@@ -10,7 +10,7 @@ WorkingDirectory=/home/adamprobert/Cheddar/PieBrain/ChedWeb/backend
 Environment="PATH=/home/adamprobert/Cheddar/PieBrain/ChedWeb/backend/.venv/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
 
 # Pre-start: Git sync from main branch
-ExecStartPre=/bin/bash -c 'cd /home/adamprobert/Cheddar && git checkout main && git reset --hard HEAD && git pull'
+ExecStartPre=/bin/bash -c 'cd /home/adamprobert/Cheddar && git fetch origin && git checkout main && git reset --hard origin/main'
 
 # Install/update Python dependencies
 ExecStartPre=/bin/bash -c 'cd /home/adamprobert/Cheddar/PieBrain/ChedWeb/backend && .venv/bin/pip install --upgrade pip'
