feat: update UART configuration and permissions for Raspberry Pi GPIO

--- a/PieBrain/ChedWeb/backend/.env.example
+++ b/PieBrain/ChedWeb/backend/.env.example
@@ -18,7 +18,7 @@ CAMERA_FRAMERATE=30
 CAMERA_FLIP_180=true
 
 # Serial/UART configuration (ESP32 MotionDriver)
-SERIAL_PORT=/dev/ttyUSB0  # Or /dev/serial0 for Pi GPIO UART
+SERIAL_PORT=/dev/serial0  # GPIO UART on Raspberry Pi (GPIO 14/15)
 SERIAL_BAUDRATE=115200
 SERIAL_TIMEOUT=1.0
 SERIAL_MOCK=false  # Set to true for testing without hardware
