--- a/MotionDriver/platformio.ini
+++ b/MotionDriver/platformio.ini
@@ -16,8 +16,8 @@ lib_deps =
 	adafruit/Adafruit PWM Servo Driver Library @ ^2.4.1
 monitor_speed = 115200
 monitor_filters =
-    time;
-    send_on_enter;
-    debug;
+    time
+    send_on_enter
+    debug
 
 
